# kivy-order-app

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
activemq/conf/: activemq.xml
order_app/api/: main.py
order_app/api/config/: database.py
order_app/api/modules/orders/: order_entity.py  order_repository.py  order_router.py  order_schemas.py
order_app/api/utils/: tags.py
order_app/queue/: main.py
order_app/queue/config/: settings.py
order_app/queue/queues/: order_queue.py
order_app/web/: main.py
order_app/web/pages/main/: main_screen.kv  main_screen.py
order_app/web/pages/orders/: orders_screen.kv  orders_screen.py
order_app/web/pages/orders/add_new_order/: add_new_order_screen.kv  add_new_order_screen.py
order_app/web/services/: order_service.py
order_app/web/services/types/: order.py
order_app/web/uix/header/: header.kv
order_app/web/utils/: path.py
order_app/web/utils/decorators/: debounce.py
scripts/: main.py
