[tool.poetry]
name = "order-app"
version = "0.1.0"
description = ""
authors = ["JohnKGS <johnkelvinsouza@hotmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start_api = "order_app.api.main:start"
start_web = "order_app.web.main:start"
start_queue = "order_app.queue.main:start"

[tool.poetry.dependencies]
python = "^3.9"
Kivy = {extras = ["base"], version = "^2.1.0"}
kivymd = "^1.1.1"
fastapi = "^0.85.2"
uvicorn = "^0.19.0"
SQLAlchemy = "^1.4.42"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
"stomp.py" = "^8.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ["py39"]
